# Majed-Portfolio

./: LICENSE  app.py  database.py  pyproject.toml
templates/: contactus.html  home.html  massage_submitted.html  project_details.html
